src/test/ui/feature-gates/feature-gate-unsized_locals.rs
fn f(f: FnOnce()) {}
//~^ ERROR E0277

fn main() {
}
